# SyncAgent

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
android/: gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  main_android.cpp
android/app/src/main/java/com/syncagent/: CloudSync.kt  MainActivity.kt  NotificationTapReceiver.kt  SyncService.kt  SyncWidgetProvider.kt
android/app/src/main/res/drawable/: widget_bg.xml
android/app/src/main/res/layout/: widget_sync.xml
android/app/src/main/res/values/: strings.xml
android/app/src/main/res/xml/: widget_sync_info.xml
android/gradle/: libs.versions.toml
docs/: data-deletion.html  design_backlog.md  feedback_beta1.md  privacy.html  store_listing.md
src/: app.rc  cloud_sync.h  cloud_sync_android.cpp  cloud_sync_win.cpp  dashboard.cpp  dashboard.h  equipment.cpp  equipment.h  game.cpp  game.h  lang.cpp  lang.h  main.cpp  platform.h  platform_android.cpp  platform_win.cpp  tray.cpp  tray.h
tools/: make_android_icons.ps1  make_fantasy_icon.ps1  make_icon.ps1  make_store_assets.ps1
